After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 682075 - gdbus: Fix double free and use after free of object path
gdbus: Fix double free and use after free of object path
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: gdbus
unspecified
Other All
: Normal normal
: ---
Assigned To: David Zeuthen (not reading bugmail)
gtkdev
Depends on:
Blocks:
 
 
Reported: 2012-08-17 08:59 UTC by Stef Walter
Modified: 2012-08-21 11:22 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
gdbus: Fix double free and use after free of object path (957 bytes, patch)
2012-08-17 08:59 UTC, Stef Walter
committed Details | Review

Description Stef Walter 2012-08-17 08:59:03 UTC
 * This occurs when the 'g-object-path' property is read
   on a GDBusObjectSkeleton
Comment 1 Stef Walter 2012-08-17 08:59:04 UTC
Created attachment 221556 [details] [review]
gdbus: Fix double free and use after free of object path
Comment 2 Matthias Clasen 2012-08-17 18:41:01 UTC
Looks right. It would be nice to have a test that shows the double-free
Comment 3 Colin Walters 2012-08-17 18:46:07 UTC
(In reply to comment #2)
> Looks right. It would be nice to have a test that shows the double-free

Eh...not sure we need to make people do test cases just to fix a missing or double free().
Comment 4 Matthias Clasen 2012-08-18 20:33:16 UTC
Can't hurt to ask for one, though ?
Comment 5 David Zeuthen (not reading bugmail) 2012-08-20 14:52:46 UTC
Comment on attachment 221556 [details] [review]
gdbus: Fix double free and use after free of object path

Good catch - please commit. Thanks!
Comment 6 Stef Walter 2012-08-21 11:22:37 UTC
Attachment 221556 [details] pushed as a8c784d - gdbus: Fix double free and use after free of object path